--- a/ConAuction3/Views/MainWindow.xaml
+++ b/ConAuction3/Views/MainWindow.xaml
@@ -11,8 +11,6 @@
                 <ResourceDictionary Source="/PresentationFramework.Luna;component/themes/Luna.Metallic.xaml"/>
                 <ResourceDictionary Source="../Resources/ResourceDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <converters:BoolToVisibilityConverter x:Key="BooleanToInverseVisibilityConverter" TrueValue="Collapsed"
-                                                  FalseValue="Visible" />
             <converters:BoolToVisibilityConverter x:Key="BooleanToVisibilityConverter" TrueValue="Visible"
                                                   FalseValue="Collapsed" />
         </ResourceDictionary>
@@ -24,6 +22,7 @@
         <KeyBinding Key="F2" Command="{Binding ShowCustomerCommand}" />
         <KeyBinding Key="F5" Command="{Binding NewProductCommand}" />
         <KeyBinding Key="F6" Command="{Binding ShowProductCommand}" />
+        <KeyBinding Key="F12" Command="{Binding GotoProductCommand}" />
     </Window.InputBindings>
 
     <DockPanel>
@@ -97,6 +96,8 @@
                                   Visibility="{Binding FilterCheckVisible, Converter={StaticResource BooleanToVisibilityConverter}}" 
                                   IsChecked="{Binding Path=FilterUnsoldOnly}">Bara osålt</CheckBox>
                         <Button DockPanel.Dock="Left" Content="Sålt!" Command="{Binding SellProductCommand}"  TabIndex="18" Margin="10,5,10,5" 
+                                Visibility="{Binding FilterCheckVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <Button DockPanel.Dock="Left" Content="Gå till..." Command="{Binding GotoProductCommand}"  TabIndex="18" Margin="10,5,10,5" 
                                 Visibility="{Binding FilterCheckVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
                         <Button DockPanel.Dock="Left" Content="Exportera" Command="{Binding ExportProductsCommand}"  TabIndex="18" Margin="10,5,10,5" 
                                 Visibility="{Binding FilterCheckVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
